fdo#42073: sw: expand all text fields when setting properties:

SwXTextField::setPropertyValue: call Expand() for all text fields
Fixes getPresentation returning stale values.
(regression from CWS sw34bf01, 8485708f3001fca132c3353c464fe7187ef62bed)
Also, without this the text formatting does not actually update and the new
content is not displayed until some other unrelated editing operation.